added basic html template

--- a/index.html
+++ b/index.html
@@ -8,7 +8,27 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header>
+        <h1>Health4U</h1>
+    </header>
+    <nav>
+        <h2>"Insert Weather Module"</h2>
+    </nav>
+<main>
+    <section id="exerciseSearch">
+        <h2>Find Your Workout!</h2>
+    </section>
+    <section id="timer">
+        <h2>Time Your Workout!</h2>
+    </section>
+    <aside id="journal">
+        <h2>Track Your Workout!</h2>
+    </aside>
+
     <script src="script.js"></script>
+</main>
+<footer>
+<h3>©Denzel Wallace, Sarah Maskill, and Wafa Mohessin</h3>
+</footer>
 </body>
 </html>
