added JQuery link

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <aside id="journal">
         <h2>Track Your Workout!</h2>
     </aside>
-
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="script.js"></script>
 </main>
 <footer>
