added drop down for search bars

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
 <main>
     <section id="exerciseSearch">
         <h2>Find Your Workout!</h2>
+        <select id="selectBP">
+            <option>Search By Bodypart</option>
+        </select>
+        <select id="selectEquipment">
+            <option>Search By Equipment</option>
+        </select>
+   
     </section>
     <section id="timer">
         <h2>Time Your Workout!</h2>
