added journal box

--- a/index.html
+++ b/index.html
@@ -23,6 +23,9 @@
     </section>
     <aside id="journal">
         <h2>Track Your Workout!</h2>
+        <textarea rows = "5" cols = "70" name = "description">
+            Log those gains! (Enter your workout here)
+         </textarea>
     </aside>
 
     <script src="script.js"></script>
