"added search button, fetch error needs work"

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <select id="selectEquipment">
             <option>Search By Equipment</option>
         </select>
+        <button type="button" id="searchButton">Search</button>
+        <div id="exercise">
+
+        </div>
    
     </section>
     <section id="timer">
