--- a/timer/index.html
+++ b/timer/index.html
@@ -40,9 +40,9 @@
       <button id="reset" class="btn">Rest</button>
 </div>
 
-<div id="endnote"></div>
+<!-- <div id="endnote"></div>
 <h1>Completed</h1>
-</div>
+</div> -->
 
 
 <script src="script.js"></script>
