added temp weather bar

--- a/index.html
+++ b/index.html
@@ -13,7 +13,10 @@
         <h1>Health4U</h1>
     </header>
     <nav class="center-align">
-        <h2>"Insert Weather Module"</h2>
+        <a class="weatherwidget-io" href="https://forecast7.com/en/42d33n83d05/detroit/?unit=us" data-label_1="DETROIT" data-label_2="WEATHER" data-theme="original" >DETROIT WEATHER</a>
+         <script>
+            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
+        </script>
     </nav>
 <main class="row">
    <div id="left side" class="col s6 center-align">
