--- a/index.html
+++ b/index.html
@@ -13,32 +13,34 @@
         <h1>Health4U</h1>
     </header>
     <nav class="center-align">
-        <a class="weatherwidget-io" href="https://forecast7.com/en/42d33n83d05/detroit/?unit=us" data-label_1="DETROIT" data-label_2="WEATHER" data-theme="original" >DETROIT WEATHER</a>
-         <script>
-            !function(d,s,id){var js,fjs=d.getElementsByTagName(s)[0];if(!d.getElementById(id)){js=d.createElement(s);js.id=id;js.src='https://weatherwidget.io/js/widget.min.js';fjs.parentNode.insertBefore(js,fjs);}}(document,'script','weatherwidget-io-js');
-        </script>
     </nav>
-<main class="row">
+<div id="main" class="row">
    <div id="left side" class="col s6 center-align">
-    <section class="card-panel teal" id="exerciseSearch">
+    <div class="card-panel teal" id="exerciseSearch">
         <h2>Find Your Workout!</h2>
-        <select id="selectBP">
-            <option>Search By Bodypart</option>
-        </select>
-        <select id="selectEquipment">
-            <option>Search By Equipment</option>
-        </select>
-        <button type="button" id="searchButton" class="waves-effect waves-light btn">Search</button>
+        <div class="input-field col s12">
+            <select id="selectBP">
+            </select>
+            <label>Bodypart</label>
+            <button type="button" id="bodypart" class="waves-effect waves-light btn">Search By Bodypart
+            </button>
+          </div>
+          <div class="input-field col s12">
+            <select id="selectEquipment">
+            </select>
+            <label>Equipment</label>
+            <button type="button" id="equipment" class="waves-effect waves-light btn">Search By Equipment
+            </button>
+          </div>
+        <button type="button" id="searchButton" class="waves-effect waves-light btn">Random Search</button>
         <div id="exercise">
-
         </div>
-   
-    </section>
-    <section class="card-panel teal center-align" id="timer">
+    </div>
+    <div class="card-panel teal center-align" id="timer">
         <h2>Time Your Workout!</h2>
-    </section>
+    </div>
   </div>
-    <aside class="col s6 center-align" id="journal">
+    <div class="col s6 center-align" id="journal">
     <div>
         <h2>Track Your Workout!</h2>
         <textarea id='box1'></textarea>
@@ -55,10 +57,11 @@
     <div id="spotify player">
         <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUSyphfcc6aL?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
-    </aside>
+</div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="script.js"></script>
-</main>
+</div>
 <footer>
 <h3>©Denzel Wallace, Sarah Maskill, and Wafa Mohessin</h3>
 </footer>
