--- a/index.html
+++ b/index.html
@@ -54,6 +54,21 @@
              }
         </script>
     </div>
+    <div id="searchCol" class="row">
+        <h2>Search for a City</h2>
+        <input type="text" placeholder="City Name" id="cityName">
+        <button type="button" id="searchBTN" class="waves-effect waves-light btn">Search</button>
+    </div>
+    <div id="Weather" class="card-panel teal">
+        <h2 id="location"></h2>
+        <div id="date"><h3>Date</h3></div>
+        <div ><img id="conditionIcon"></div>
+        <h3>Description</h3>
+        <div id="description"></div>
+        <h3>Tempature:</h3>
+        <h2 id="temp"></h2>
+        <h3>Humidity</h3>
+        <div id="humidity"></div>
     <div id="spotify player">
         <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUSyphfcc6aL?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
     </div>
