pushing any update

--- a/timer/index.html
+++ b/timer/index.html
@@ -18,13 +18,13 @@
       <h1 id="headline">Countdown to my exercise:</h1>
 
     <div class= "containerNumber">
-        <input id="hours" type="number" max="99" min="0" value="0" class="time">
+        <input id="hours" type="number" max="99" min="0" placeholder="0"class="time">
         <p id="p1" class="semicolon">:</p>
 
-        <input id="minutes" type="number" max="60" min="0" value="0" class="time">
+        <input id="minutes" type="number" max="60" min="0" placeholder="0" class="time">
          <p id="p2" class="semicolon">:</p>
 
-    <input id="seconds" type="number" max="60" sec="0" value="0" class="time">
+    <input id="seconds" type="number" max="60" sec="0" placeholder="0" class="time">
   
 </div>
 
