--- a/index.html
+++ b/index.html
@@ -22,14 +22,14 @@
             <select id="selectBP">
             </select>
             <label>Bodypart</label>
-            <button type="button" id="bodypart" class="waves-effect waves-light btn">Search By Bodypart
+            <button type="button" id="bodypartBTN" class="waves-effect waves-light btn">Search By Bodypart
             </button>
           </div>
           <div class="input-field col s12">
             <select id="selectEquipment">
             </select>
             <label>Equipment</label>
-            <button type="button" id="equipment" class="waves-effect waves-light btn">Search By Equipment
+            <button type="button" id="equipmentBTN" class="waves-effect waves-light btn">Search By Equipment
             </button>
           </div>
         <button type="button" id="searchButton" class="waves-effect waves-light btn">Random Search</button>
