--- a/index.html
+++ b/index.html
@@ -25,12 +25,14 @@
             <button type="button" id="bodypartBTN" class="waves-effect waves-light btn">Search By Bodypart
             </button>
           </div>
+          <div id = "bpResult"></div>
           <div class="input-field col s12">
             <select id="selectEquipment">
             </select>
             <label>Equipment</label>
             <button type="button" id="equipmentBTN" class="waves-effect waves-light btn">Search By Equipment
             </button>
+            <div id = "equipmentResult"></div>
           </div>
         <button type="button" id="searchButton" class="waves-effect waves-light btn">Random Search</button>
         <div id="exercise">
