removed old CSS frame work

--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
 <body>
 
 
-    <header class="center-align">
+    <header class="">
         <h1>Health4U</h1>
     </header>
 
 
-    <nav class="center-align">
+    <nav class="">
     </nav>
 
     
@@ -122,7 +122,6 @@
 
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/js/materialize.min.js"></script>
     <script src="timerscript.js"></script>
     <script src="script.js"></script>
 </div>
