--- a/mainpage/index.html
+++ b/mainpage/index.html
@@ -93,7 +93,7 @@
 
       <div class="container-progress"> 
         <h1 id="yourprogess">Your progress is</h1>
-      <input class="button"> % </button>
+      <input class="sign"> % </button>
       </div>
 
       <div class="container-weathermap">
