--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,91 +9,117 @@
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="styleupdate.css">
 </head>
+
 <body>
-        <header class="navbar">
-            <div class="navbar-brand">
-                 <img src="./images/ProjectMock-upLogo-08.png" alt="site logo" style="max-height: 300px;">
-            </div>
-        </header>
-<br><br>
-<div class="columns is-mobile">
-    <div id="rightside" class="active-container column">
-            <div class= "" id="exerciseSearch">
-                <h2>Find Your Workout!</h2>
-                <div class="select is-primary">
-                    <select id="selectBP">
-                    </select>
-                    <label>Bodypart</label>
+    <header class="hero is-primary">
+        <div>
+            <img src="./ProjectMock-up-Logo-08.png" alt="site logo" style="max-height: 300px;">
+        </div>
+    </header>
+    <br><br>
+    <div class="columns">
+        <div id="rightside" class="column">
+            <div id="exerciseSearch" class="card">
+                <div class="card-content">
+                    <h1>Find Your Workout!</h1>
+                    <br>
+                    <div class="select">
+                        <select id="selectBP">
+                        </select>
+                    </div>
                     <button type="button" id="bodypartBTN" class="button">Search By Bodypart
                     </button>
-                </div>
-                <div id = "bpResult"></div>
-                <div class="select is-primary">
-                    <select id="selectEquipment">
-                    </select>
-                    <label>Equipment</label>
+                    <br>
+                    <div id="bpResult"></div>
+                    <br>
+                    <div class="select">
+                        <select id="selectEquipment">
+                        </select>
+                    </div>
                     <button type="button" id="equipmentBTN" class="button">Search By Equipment
                     </button>
+                    <br>
+                    <div id="equipmentResult"></div>
+                    <br>
+                    <div>
+                        <button type="button" id="searchButton" class="button container">Random Search</button>
+                        <div id="exercise"></div>
+                    </div>
+                    <br>
                 </div>
-                <div id = "equipmentResult"></div>
-                <div>
-                    <button type="button" id="searchButton" class="button">Random Search</button>
-                    <div id="exercise"></div>
+                <div class="card" id="spotify player">
+                    <div class="card-content">
+                        <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUSyphfcc6aL?theme=0"
+                            width="100%" height="380" frameBorder="0" allowtransparency="true"
+                            allow="encrypted-media"></iframe>
+                    </div>
                 </div>
-            <div id="spotify player">
-                <iframe src="https://open.spotify.com/embed/playlist/37i9dQZF1DWUSyphfcc6aL?theme=0" width="100%" height="380" frameBorder="0" allowtransparency="true" allow="encrypted-media"></iframe>
             </div>
-            </div>
-     <div class="column" id="leftside" >
-            <h1 id="headline">Countdown to my exercise:</h1>
-        <div class="containerText columns is-mobile">
-            <p id="hours-label" class="label column">Hours</p>
-            <p id="minutes-label" class="label column">Minutes</p>
-            <p id="seconds-label" class="label column">Seconds</p>
         </div>
-        <div class= "containerNumber columns is-mobile">
-            <input id="hours" type="number" max="99" min="0" placeholder="0"class="time column">
-            <p class="semicolon">:</p>
-            <input id="minutes" type="number" max="60" min="0" placeholder="0" class="time column">
-            <p class="semicolon">:</p>
-            <input id="seconds" type="number" max="60" sec="0" placeholder="0" class="time column">
+        <div class="column" id="leftside">
+            <div class="card timer">
+                <div class="card-content">
+                    <h1 id="headline">Countdown to my exercise:</h1>
+                    <div class="containerText columns is-mobile">
+                        <p id="hours-label" class="label column">Hours</p>
+                        <p id="minutes-label" class="label column">Minutes</p>
+                        <p id="seconds-label" class="label column">Seconds</p>
+                    </div>
+                    <div class="containerNumber columns is-mobile">
+                        <input id="hours" type="number" max="99" min="0" placeholder="0" class="time column">
+                        <p class="semicolon">:</p>
+                        <input id="minutes" type="number" max="60" min="0" placeholder="0" class="time column">
+                        <p class="semicolon">:</p>
+                        <input id="seconds" type="number" max="60" sec="0" placeholder="0" class="time column">
+                    </div>
+                    <div class="section-timer">
+                        <button id="start" class="button">Start</button>
+                        <button id="reset" class="button">Reset</button>
+                    </div>
+                </div>
+            </div>
+            <div class="card" id="journal">
+                <div class="card-content">
+                    <form id="application">
+                        <label for='box1'>My workout</label>
+                        <input class="input" type='text' id='box1' My workout='box1' /><br>
+                        <label for='box2'>Progress</label>
+                        <textarea id='box2' class="textarea" name='Progress'></textarea>
+                        <button class="button">Log my progress</button>
+                    </form>
+                </div>
+            </div>
+            <div class="card weatherCard">
+                <div class="card-content">
+                    <div id="searchCol" class="inputWeather container-weathermap">
+                        <h2>Search for a City</h2>
+                        <input type="text" placeholder="City Name" class="input" id="cityName">
+                        <button type="button" id="searchBTN" class="button">Search</button>
+                    </div>
+                    <div id="Weather" class="columns">
+                        <div class="column">
+                            <h2 id="location"></h2>
+                            <div><img id="conditionIcon"></div>
+                        </div>
+                        <div class="column">
+                            <h3>Description</h3>
+                            <div id="description"></div>
+                            <h3>Temperature:</h3>
+                            <h2 id="temp"></h2>
+                            <h3>Humidity</h3>
+                            <div id="humidity"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
-            <div class="section-timer">
-            <button id="start" class="btn">Start</button>
-            <button id="reset" class="btn">Reset</button>
-            </div>
-            </div>
-    <div class="" id="jounal">
-        <form id="application">
-            <label for='box1'>My workout</label>
-            <input type='text' id='box1' My workout='box1' /><br>
-            <label for='box2'>Progress</label>
-            <textarea id='box2' name='Progress'></textarea>
-            <button class="buttons are-medium">Log my progress</button>
-        </form>
     </div>
-            <div id="searchCol" class="inputWeather container-weathermap">
-                <h2>Search for a City</h2>
-                <input type="text" placeholder="City Name" id="cityName">
-                <button type="button" id="searchBTN" class="button">Search</button>
-            </div>
-            <div id="Weather" class=>
-                <h2 id="location"></h2>
-                <div><img id="conditionIcon"></div>
-                <h3>Description</h3>
-                <div id="description"></div>
-                <h3>Tempature:</h3>
-                <h2 id="temp"></h2>
-                <h3>Humidity</h3>
-                <div id="humidity"></div>
-            </div>
-    </div>
-</div>
-    <footer>
+    <footer class="card">
         <h5>©Denzel Wallace, Sarah Maskill, and Wafa Mohessin</h5>
     </footer>
 
-        <script src="timerscript.js"></script>
-        <script src="script.js"></script>
+    <script src="timerscript.js"></script>
+    <script src="script.js"></script>
 </body>
+
 </html>
