added clear button

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                     <br>
                     <div>
                         <button type="button" id="searchButton" class="button container">Random Search</button>
+                        <button type="button" id="clear" class="button">Clear Workout</button>
                         <div id="exercise"></div>
                     </div>
                     <br>
